# ppo

./: .gitignore  ACTIVITY_LOG.md  ACTIVITY_LOG_OLD2.md  FLOWS.md  Makefile  README.md  TODO.md  jack.json  rose.json  run.sh  z_write.md
app/: .gitignore  CLEANUP_LOG.md  README.md  README.md.backup  __init__.py  create_schedule_visualizations.py  debug_curriculum_env.py  debug_model.py  load_real_production_data.py  mcp.json  phase2_final_push.py  prepare_full_production_data.py  pyproject.toml  run_api_server.py  run_model_comparison.py  run_phase2_curriculum.py  run_phase2_simple.py  run_phase4_auto.py  test_api_integration.py  test_curriculum_phases.py  test_job_scheduling.py  test_job_splitting.py  visualize_curriculum_clean.py  visualize_curriculum_progress.py  visualize_curriculum_schedule.py  visualize_lcd_impact.py  visualize_scaled_production.py  visualize_schedule_job_clean.py  visualize_schedule_job_view.py  visualize_schedule_machine_clean.py  visualize_schedule_machine_view.py  visualize_schedule_with_breaks.py
app/configs/: scaled_production_config.yaml  toy_config.yaml
app/data/: .use_real_data_only  large_production_data.json  parsed_production_data.json  parsed_production_data_boolean.json  ppo_production_snapshot_20250716_144554.json  ppo_production_snapshot_20250716_144711.json  (+5 more)
app/sql/: README.md  (+1 more)
app3/: .dockerignore  Dockerfile  Makefile  README.md  TODO.md  analyze_and_visualize.py  analyze_blocking.py  compare_evidence.py  compare_models.py  create_visualization.py  debug_schedule.py  evaluate_10x.py  monitor_training.py  pyproject.toml  run_api.sh  run_fast_training.sh  schedule_and_visualize_10x.py  schedule_with_ppo.py  schedule_with_sb3_and_visualize.py  simple_validation.py  statistical_validation.py  test_1million_model.py  test_and_visualize.py  test_environment.py  test_integration.py  test_ppo_model.py  test_trained_model.py  train_100_jobs.py  train_100_jobs_simple.py  train_10x.py  train_10x_fast.py  train_advanced.py  train_deadline_focused.py  train_improved.py  train_sb3_100x.py  train_sb3_1million.py  train_sb3_1million_fixed.py  train_sb3_500k.py  train_sb3_500k_fixed.py  train_sb3_demo.py  (+5 more)
app_2/: .gitignore  README.md  pyproject.toml  run_test.py  start_training.py  test_db_connection.py  test_integration.py  verify_training_ready.py
(+466 files in other folders)
