[project]
name = "app3-ppo-scheduler"
version = "0.1.0"
description = "Simplified PPO scheduling system with pre-assigned machines"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26.0",
    "gymnasium>=0.29.1",
    "stable-baselines3>=2.2.1",
    "torch>=2.1.0",
    "tensorboard>=2.15.1",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.1",
    "pymysql>=1.1.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "requests>=2.32.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.8",
    "pyright>=1.1.342",
    "ipython>=8.18.1",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Line too long

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
